# book

./: .gitignore  PROJECT_STATUS.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
.pnpm-store/v10/index/00/: 3563a4e3a48f3d6186464b94189803d711d809dff05e07a9950ee9ee5e0dc3-micromark-extension-gfm-strikethrough@2.1.0.json  e22049009ea62258c0fdc04671b1fb95674eed870587736c63f8e5e2f0d6fa-glob-parent@5.1.2.json
.pnpm-store/v10/index/02/: 29b8945aa16e28e772197cdd12df0015ae7921acd685024afd26aeef7541d8-@codemirror+view@6.39.17.json  9e86d16430714fcb1ecbcbc0e3757c0417f59a7403663a63f709065f6bfc96-esquery@1.7.0.json
.pnpm-store/v10/index/04/: b2374e5d535b73ef97bd25df2ab763ae22f9ac29c17aac181616924a8cb676-which@2.0.2.json  (+3 more)
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: file_commands.rs  mod.rs  search_commands.rs
src/components/editor/: Editor.tsx  MilkdownEditor.tsx  MonacoCodeBlock.tsx  PropertyPanel.tsx  index.ts
src/components/graph/: GraphView.tsx
src/components/sidebar/: BacklinkPanel.tsx  BookmarkPanel.tsx  ContextMenu.tsx  FileTreeItem.tsx  SearchPanel.tsx  Sidebar.tsx  TagPanel.tsx  index.ts
src/services/: configService.ts  fileService.ts  graphService.ts  linkService.ts  searchService.ts
src/stores/: bookmarkStore.ts  graphStore.ts  searchStore.ts  tagStore.ts  themeStore.ts  workspaceStore.ts
src/types/: index.ts
src/utils/: frontmatter.ts  linkUtils.ts
(+426 files in other folders)
